# music-genre-classification

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  approach1_mfcc.py  approach1_results.json  approach2_cnn.py  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
tests/: test_smoke.py
