[project]
name = "music-genre"
version = "0.1.0"
description = "Deep learning music genre classification, VUB ML 2025-2026"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Saeid Shahriari" },
]
license = { text = "MIT" }

dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "librosa>=0.10",
    "torch>=2.2",
    "torchaudio>=2.2",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "tqdm>=4.66",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "ipykernel>=6.29",
    "nbstripout>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/music_genre"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "B",    # flake8-bugbear (real bugs)
    "UP",   # pyupgrade (modern Python syntax)
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line length handled by formatter
    "N803",   # allow uppercase X in function args (ML convention)
    "N806",   # allow uppercase X in variables (ML convention)
    "N812",   # allow F, T as imports (PyTorch convention)
]

[tool.ruff.lint.pep8-naming]
extend-ignore-names = ["transform_MFCC", "*_MFCC", "*_CNN", "*_MLP", "*_SVM"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src/music_genre --cov-report=term-missing"